Progress: Redirected after to homepage after user signup or login Checked user input for password confirmation in the backend Added a database collection for professors Show purdue student as author of posts Temporarily fixed Course info covering posts Implemented new review posting REIMPLEMENTED LOGIN DROPDOWN MENU Fixed sign() function

--- a/src/easyA/static/class.css
+++ b/src/easyA/static/class.css
@@ -180,11 +180,15 @@ button span:before, button span:after
 }
 #class-header {
 	width: 100%;
-	position: fixed;
+	position: static;
 	background-color: #292929;
 	top: 0;
-	left: 0;
+    left: 0;
 	z-index: 99999;
+}
+
+#posts {
+    display: inline-block;
 }
 
 #row1 {
@@ -199,7 +203,7 @@ hr {
 	margin-bottom: -8px;
 }
 ul {
-	margin-top: 400px;
+	margin-top: 2%;
 }
 
 #row2{
